--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "apollo-server-core": "^3.13.0",
+    "apollo-server-plugin-base": "^3.7.2",
+    "apollo-server-types": "^3.8.0",
     "express": "^4.18.2",
     "graphql": "^16.8.1"
   }
