--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.2"
   },
@@ -18,7 +21,13 @@
     "apollo-server-core": "^3.13.0",
     "apollo-server-plugin-base": "^3.7.2",
     "apollo-server-types": "^3.8.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.11.0"
   }
 }
