--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/mongoose-delete": "^1.0.3",
     "@types/morgan": "^1.9.9",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.2"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
-    "apollo-server-core": "^3.13.0",
-    "apollo-server-plugin-base": "^3.7.2",
-    "apollo-server-types": "^3.8.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "mongoose": "^8.0.1",
+    "mongoose-delete": "^1.0.1",
     "morgan": "^1.10.0",
     "winston": "^3.11.0"
   }
