--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose-delete": "^1.0.3",
     "@types/morgan": "^1.9.9",
+    "@types/validator": "^13.11.7",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.2"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -31,6 +34,7 @@
     "mongoose": "^8.0.1",
     "mongoose-delete": "^1.0.1",
     "morgan": "^1.10.0",
+    "validator": "^13.11.0",
     "winston": "^3.11.0"
   }
 }
