--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@ PORT=8080
 NODE_ENV=development
 
 # Backend Site URL
-BASE_URL = "http://localhost:8080"
+BASE_URL="http://localhost:8080"
 
 # URL of the Mongo DB
-MONGODB_URL=
+MONGODB_URL="mongodb+srv://Suraj-Kolhe:hfQsjzxasy8Knhhi@cluster0.in5sicv.mongodb.net/graphql-learning?retryWrites=true&w=majority"
 
 # Recaptch secret key
 RECAPTCHA_SECRET=
