--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NODE_ENV=development
 BASE_URL="http://localhost:8080"
 
 # URL of the Mongo DB
-MONGODB_URL="mongodb+srv://Suraj-Kolhe:hfQsjzxasy8Knhhi@cluster0.in5sicv.mongodb.net/graphql-learning?retryWrites=true&w=majority"
+MONGODB_URL=
 
 # Recaptch secret key
 RECAPTCHA_SECRET=
