--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
   # This sample publishes the directory located at the absolute 
   # path "root/project/build-output"
 
-  publish = "build-output/"
+  publish = "build/"
 
   # Default build command.
   command = "tsc"
