--- a/netlify.toml
+++ b/netlify.toml
@@ -27,8 +27,8 @@
 # here but we recommend using the Netlify UI for sensitive
 # values to keep them out of your source repository.
 [context.production]
-  publish = "build/index.js"
-  command = "node build/index.js"
+  publish = "index.js"
+  command = "node index.js"
   environment = { NODE_VERSION = "14.15.3" }
 
 # Deploy Preview context: all deploys generated from
