--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node build/index.js",
+    "build":"tsc",
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
